click events and keyboard events

--- a/index.html
+++ b/index.html
@@ -27,8 +27,21 @@
                 <li class="list-group-item">Item 2</li>
                 <li class="list-group-item">Item 3</li>
                 <li class="list-group-item">Item 4</li>
-
             </ul>
+            <ul id="items2" class="list-group">
+                <li class="list-group-item">Other Item 1</li>
+                <li class="list-group-item">Other Item 2</li>
+                <li class="list-group-item">Other Item 3</li>
+                <li class="list-group-item">Other Item 4</li>
+            </ul>
+            <div id="output">
+            </div>
+            <br>
+            <button class="btn btn-dark btn-block" id="button">Click Here</button>
+            <br>
+            <div id="box" style="width: 400px;height:200px; background: #f4f4f4";"><h3>
+                Hello
+            </h3></div>
         </div>
     </div>
 </body>
